# emacsrc

./: .envrc  .gitignore  .gitmodules  GNUmakefile  LICENSE  Makefile  README.md  default.nix  dot.emacs  dot.emacs.el  emacs.mk  flake.nix
backup/: bootstrap.sh
conkeror/: GNUmakefile  Makefile  bindings.js  clients.js  conkerorrc.js  instapaper.js  jumps.js  load_css.js  modeline.js  page_modes.js  passwords.js  presentation.js  user.css
download/: GNUmakefile  Makefile  apel.sh  auctex.sh  common.sh  epg.sh  erc.sh  gnus.sh  haskell.sh  magit.sh  markdown.sh  muse.sh  orgmode.sh  php.sh  rinari.sh
emacs/: GNUmakefile  Makefile  dot.emacs.el  emacs.mk
emacs.d/: muse.el  options.el  org-full.el  org.el  pmade-colors.el  pmade-custom.el  pmade-erc.el  pmade-functions.el  pmade-keybindings.el  pmade-loadpath.el  pmade-local.el  pmade-mingus.el  pmade-muse.el  pmade-options.el  pmade-org-full.el  pmade-org.el  pmade-packages.el  pmade-programming.el  pmade-rcirc.el  pmade-ruby.el  pmade-server.el  pmade-term.el
git/: GNUmakefile  Makefile  gitconfig  mrconfig
gnus/: Makefile  README  dot.gnus.el
haskell/: GNUmakefile  cabal.config  pjones.cabal
hydras/: dired.el  haskell-mode.el
latex/: GNUmakefile  Makefile  example.mk  latex.mk  latexmkrc  muse.tex
lisp/: GNUmakefile  automode.el  buffers.el  code.el  completion.el  functions.el  gnus-init.el  interactive.el  keys.el  loadpath.el  macros.el  mode-line.el  modes.el  options.el  packages.el  projector.el  projects.el  server.el  suspend.el  (+2 more)
xmonad/: GNUmakefile  Makefile  pjones-xmonad.cabal  xmonad.hs
(+539 files in other folders)
